[gd_scene load_steps=4 format=2]

[ext_resource path="res://System/Scenes/DialogRenderer.gd" type="Script" id=1]
[ext_resource path="res://System/Scenes/EROCharacterRenderer.tscn" type="PackedScene" id=2]
[ext_resource path="res://System/Fonts/OpenSans-Regular-25.tres" type="DynamicFont" id=3]

[node name="ERODialogRenderer" type="Node" index="0"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="DialogRenderer" type="Control" parent="CanvasLayer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Background" type="Panel" parent="CanvasLayer/DialogRenderer" index="0"]
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Visibility" ]

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer/DialogRenderer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = true
stretch_shrink = 1

[node name="Viewport" type="Viewport" parent="CanvasLayer/DialogRenderer/ViewportContainer" index="0"]
arvr = false
size = Vector2( 1280, 720 )
own_world = true
world = null
transparent_bg = true
msaa = 4
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Render Target", "Rendering" ]

[node name="Camera" type="Camera" parent="CanvasLayer/DialogRenderer/ViewportContainer/Viewport" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25438, 1.1534 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 40.0
size = 1.0
near = 0.05
far = 100.0

[node name="DirectionalLight2" type="DirectionalLight" parent="CanvasLayer/DialogRenderer/ViewportContainer/Viewport" index="1"]
transform = Transform( 0.794844, -0.355984, 0.491425, 0, 0.809845, 0.586644, -0.606814, -0.466291, 0.6437, 3.29337, 1.31188, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.2
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.01
shadow_contact = 0.3
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.05
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.7
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Directional Shadow", "Light", "Shadow" ]

[node name="EROCharacterRenderer" parent="CanvasLayer/DialogRenderer/ViewportContainer/Viewport" index="2" instance=ExtResource( 2 )]
visible = false

[node name="Scene Root" parent="CanvasLayer/DialogRenderer/ViewportContainer/Viewport" index="3" instance_placeholder="res://Content/TestContent/Bodies/BodyTest/elfbody.tscn"]
editor/display_folded = true

[node name="TextPanel" type="Control" parent="CanvasLayer/DialogRenderer" index="2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -113.0
margin_right = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Panel" type="Panel" parent="CanvasLayer/DialogRenderer/TextPanel" index="0"]
self_modulate = Color( 1, 1, 1, 0.75 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="TextLabel" type="Label" parent="CanvasLayer/DialogRenderer/TextPanel/Panel" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "adsadsadsad"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "BBCode", "custom_fonts", "custom_styles" ]

[node name="PanelName" type="Panel" parent="CanvasLayer/DialogRenderer/TextPanel" index="1"]
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -50.0
margin_right = 506.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Hint", "Rect", "Visibility" ]

[node name="NameLabel" type="Label" parent="CanvasLayer/DialogRenderer/TextPanel/PanelName" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = " asdsadsa sd"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

